# todo

./: README.md  alembic.ini  application.py  cli.py  docker-compose-postgres.yaml  main.py  models.py  pyproject.toml  repository.py
alembic/: env.py
alembic/versions/: 62037a3fdae8_initial_migration.py
app/cli/: console.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/db/: base.py  session.py
app/exceptions/: __init__.py  base.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: __init__.py  project_service.py  task_service.py
